--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 annotated-types==0.6.0
+black==24.4.0
+click==8.1.7
+mypy-extensions==1.0.0
+packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.0
 pydantic==2.7.0
 pydantic_core==2.18.1
+PySMT==0.9.5
 PyYAML==6.0.1
 typing_extensions==4.11.0
