--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 annotated-types==0.6.0
 black==24.4.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 distlib==0.3.7
+Faker==25.2.0
 filelock==3.12.4
+idna==3.7
 mypy-extensions==1.0.0
 packaging==24.0
 pathspec==0.12.1
@@ -11,6 +15,11 @@ PuLP==2.8.0
 pydantic==2.7.0
 pydantic_core==2.18.1
 PySMT==0.9.5
+python-dateutil==2.9.0.post0
 PyYAML==6.0.1
+requests==2.31.0
+six==1.16.0
+tqdm==4.66.4
 typing_extensions==4.11.0
+urllib3==2.2.1
 virtualenv==20.24.5
