--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ distlib==0.3.7
 Faker==25.2.0
 filelock==3.12.4
 idna==3.7
+minizinc==0.9.0
 mypy-extensions==1.0.0
 packaging==24.0
 pathspec==0.12.1
