Updated Minizinc Parsing
Currently missing:
- YAML resources managment and their declaration (add a section
  resources somewhere so that they can be declared eg. if they are
  consumables or not)
- In the MiniZinc parsing add worstBound and consumable / non consumable
  resources
- Updating the remainig target language (smt and so on) other than
  MiniZin

--- a/test_yaml/components_v02.yml
+++ b/test_yaml/components_v02.yml
@@ -6,8 +6,7 @@ components:
     flavours:
       large:
         uses:
-          - component: backend
-            flavour: tiny
+          - backend
         importance: 7
       medium:
         uses:
@@ -114,15 +113,33 @@ requirements:
           value: [ssl, encrypted_storage]
   dependencies:
     frontend:
-      backend:
-        latency:
-          value: 50
+      medium:
+        backend:
+          latency:
+            value: 50
+      large:
+        backend:
+          latency:
+            value: 50
     backend:
-      database:
-        latency:
-          value: 50
-        availability:
-          value: 98
+      tiny:
+        database:
+          latency:
+            value: 50
+          availability:
+            value: 98
+      medium:
+        database:
+          latency:
+            value: 50
+          availability:
+            value: 98
+      large:
+        database:
+          latency:
+            value: 50
+          availability:
+            value: 98
   budget:
     cost: 5000
     carbon: 500
