--- a/data/v0.3/components_v0.3.yaml
+++ b/data/v0.3/components_v0.3.yaml
@@ -6,61 +6,74 @@ components:
       tiny:
         uses:
           - { component: frontend, min_flavour: tiny }
+        energy: 598
       large:
         uses:
           - { component: frontend, min_flavour: large }
+        energy: 747
     importance_order: [tiny, large]
   frontend:
     flavours:
       tiny:
         uses:
           - { component: api, min_flavour: tiny }
+        energy: 475
       large:
         uses:
           - { component: api, min_flavour: medium }
           - { component: redis, min_flavour: tiny }
+        energy: 594
     importance_order: [tiny, large]
   api:
     flavours:
       tiny:
         uses:
           - { component: database, min_flavour: large }
+        energy: 546
       medium:
         uses:
           - { component: identity_provider, min_flavour: tiny }
           - { component: database, min_flavour: large }
+        energy: 682
       large:
         uses:
           - { component: identity_provider, min_flavour: large }
           - { component: etcd, min_flavour: large }
           - { component: database, min_flavour: large }
           - { component: redis, min_flavour: large }
+        energy: 853
     importance_order: [tiny, medium, large]
   identity_provider:
     flavours:
       tiny:
         uses:
           - { component: etcd, min_flavour: large }
+        energy: 707
       large:
         uses:
           - { component: etcd, min_flavour: large }
+        energy: 884
     importance_order: [tiny, large]
   database:
     flavours:
       large:
         uses: []
+        energy: 1361
     importance_order: [large]
   redis:
     flavours:
       tiny:
         uses: []
+        energy: 70
       large:
         uses: []
+        energy: 88
     importance_order: [tiny, large]
   etcd:
     flavours:
       large:
         uses: []
+        energy: 45
     importance_order: [large]
 requirements:
   components:
@@ -69,77 +82,105 @@ requirements:
         subnet: [public]
         security: [firewall]
       flavour-specific:
-        tiny: { cpu: 1, ram: 2, availability: 97, energy: 598 }
-        large: { cpu: 2, ram: 4, availability: 99, energy: 747 }
+        tiny: { cpu: 1, ram: 2, availability: 97 }
+        large: { cpu: 2, ram: 4, availability: 99 }
     frontend:
       common:
         subnet: [public]
         security: [firewall, ssl]
       flavour-specific:
-        tiny: { cpu: 1, ram: 2, availability: 98, energy: 475 }
-        large: { cpu: 2, ram: 4, availability: 99, energy: 594 }
+        tiny: { cpu: 1, ram: 2, availability: 98 }
+        large: { cpu: 2, ram: 4, availability: 99 }
     api:
       common:
         subnet: [private]
         security: [ssl]
       flavour-specific:
-        tiny: { cpu: 1, ram: 2, availability: 97, energy: 546 }
-        medium: { cpu: 2, ram: 4, availability: 98, energy: 682 }
-        large: { cpu: 2, ram: 6, availability: 99, energy: 853 }
+        tiny: { cpu: 1, ram: 2, availability: 97 }
+        medium: { cpu: 2, ram: 4, availability: 98 }
+        large: { cpu: 2, ram: 6, availability: 99 }
     identity_provider:
       common:
         subnet: [private]
         security: [ssl]
       flavour-specific:
-        tiny: { cpu: 1, ram: 2, availability: 97, energy: 707 }
-        large: { cpu: 1, ram: 4, availability: 99, energy: 884 }
+        tiny: { cpu: 1, ram: 2, availability: 97 }
+        large: { cpu: 1, ram: 4, availability: 99 }
     database:
       common:
         subnet: [private]
         security: [encrypted_storage]
       flavour-specific:
-        large: { cpu: 2, ram: 4, availability: 99, storage: 512, energy: 1361 }
+        large: { cpu: 2, ram: 4, availability: 99, storage: 512 }
     redis:
       common:
         subnet: [private]
         security: [ssl]
       flavour-specific:
-        tiny: { cpu: 1, ram: 2, availability: 97, energy: 70 }
-        large: { cpu: 1, ram: 4, availability: 99, energy: 88 }
+        tiny: { cpu: 1, ram: 2, availability: 97 }
+        large: { cpu: 1, ram: 4, availability: 99 }
     etcd:
       common:
         subnet: [private]
         security: [ssl]
       flavour-specific:
-        large: { cpu: 1, ram: 4, availability: 99, energy: 45 }
+        large: { cpu: 1, ram: 4, availability: 99 }
   dependencies:
     load_balancer:
       tiny:
-        frontend: { latency: 50, availability: 97, energy: 5 }
+        frontend:
+          requirements: { latency: 50, availability: 97 }
+          energy: 5
       large:
-        frontend: { latency: 25, availability: 99, energy: 5 }
+        frontend:
+          requirements: { latency: 25, availability: 99 }
+          energy: 5
     frontend:
       tiny:
-        api: { latency: 50, availability: 99, energy: 5 }
+        api:
+          requirements: { latency: 50, availability: 99 }
+          energy: 5
       large:
-        api: { latency: 25, availability: 98, energy: 5 }
-        redis: { latency: 25, availability: 99, energy: 3 }
+        api:
+          requirements: { latency: 25, availability: 98 }
+          energy: 5
+        redis:
+          requirements: { latency: 25, availability: 99 }
+          energy: 3
     api:
       tiny:
-        database: { latency: 60, availability: 97, energy: 11 }
+        database:
+          requirements: { latency: 60, availability: 97 }
+          energy: 11
       medium:
-        identity_provider: { latency: 40, availability: 98, energy: 3 }
-        database: { latency: 40, availability: 98, energy: 11 }
+        identity_provider:
+          requirements: { latency: 40, availability: 98 }
+          energy: 3
+        database:
+          requirements: { latency: 40, availability: 98 }
+          energy: 11
       large:
-        identity_provider: { latency: 20, availability: 99, energy: 3 }
-        etcd: { latency: 20, availability: 99, energy: 4 }
-        database: { latency: 20, availability: 99, energy: 11 }
-        redis: { latency: 20, availability: 99, energy: 1 }
+        identity_provider:
+          requirements: { latency: 20, availability: 99 }
+          energy: 3
+        etcd:
+          requirements: { latency: 20, availability: 99 }
+          energy: 4
+        database:
+          requirements: { latency: 20, availability: 99 }
+          energy: 11
+        redis:
+          requirements: { latency: 20, availability: 99 }
+          energy: 1
     identity_provider:
       tiny:
-        etcd: { latency: 40, availability: 97, energy: 1 }
+        etcd:
+          requirements: { latency: 40, availability: 97 }
+          energy: 1
       large:
-        etcd: { latency: 20, availability: 99, energy: 1 }
+        etcd:
+          requirements: { latency: 20, availability: 99 }
+          energy: 1
   budget:
     cost: 2000000
     carbon: 2000000
